--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "node-sass": "^9.0.0",
     "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "animate.css": "^4.1.1"
   }
 }
